<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twenty_five_dp"
        android:layout_marginRight="@dimen/twenty_five_dp"
        android:layout_marginTop="@dimen/eighty_dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/location_icon"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/twenty_sp"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@android:drawable/editbox_background_normal"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="@dimen/five_dp"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sixteen_sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/fifteen_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_weight="2"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btSubmit"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@android:drawable/bottom_bar"
            android:text="@string/submit"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
